--- a/Calculator/src/main/resources/application.properties
+++ b/Calculator/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/calculatordata?allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Mysql@23
@@ -6,8 +7,15 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
+#Swagger-Properties
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=error
+
+#redis-Config
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.type=redis
+spring.cache.redis.time-to-live=1h
 
 
 
