--- a/Calculator/build.gradle
+++ b/Calculator/build.gradle
@@ -17,6 +17,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.17'
+	implementation 'mysql:mysql-connector-java:8.0.26'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.7.17'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
