--- a/Calculator/src/main/resources/application.properties
+++ b/Calculator/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8020
 #Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/calculatordata?allowPublicKeyRetrieval=true
 spring.datasource.username=root
