--- a/Calculator/src/main/resources/application.properties
+++ b/Calculator/src/main/resources/application.properties
@@ -17,5 +17,7 @@ spring.redis.port=6379
 spring.cache.type=redis
 spring.cache.redis.time-to-live=1h
 
+spring.main.allow-circular-references=true
+
 
 
